added update + bearer in swagger
